<resources>
    <string name="app_name">LiveSplit Remote</string>
    <string name="menuSettings">Settings</string>
    <string name="settingsIdIp">IP</string>
    <string name="settingsIdPort">Port</string>
    <string name="settingsIdPolldelay">PollDelay</string>
    <string name="settingsIdTimeout">Timeout</string>
    <string name="settingsIdDarktheme">DarkTheme</string>
    <string name="settingsIdTimerformat">TimerFormat</string>
    <string name="settingsIdVibrate">VibrationEnabled</string>
    <string name="settingsIdFirstStart">FirstStart</string>
    <string name="defaultPrefPolling">2 s</string>
    <string name="defaultPrefTimeout">3 s</string>
    <string name="defaultPrefPort">16834</string>
    <string name="defaultPrefIp">Not set yet</string>
    <string name="defaultPrefTimerformat">[HH:][mm:]ss.SS</string>
    <string name="serverIpNotSet">Server IP has not been set yet.</string>
    <string name="ipParseError">Error reading saved IP</string>
    <string name="portParseError">Error reading saved port</string>
    <string name="pollingParseError">Error reading saved polling delay setting</string>
    <string name="timeoutParseError">Error reading saved network timeout setting</string>
    <string name="themeParseError">Error reading saved theme setting</string>
    <string name="vibrationParseError">Error reading saved vibration setting</string>
    <string name="timerFormatParseError">Error reading saved timer format setting</string>
    <string name="firstStartParseError">Error reading setting if this is the first app start</string>
    <string name="ipSyntaxError">IP syntax is not a valid</string>
    <string name="portSyntaxError">Port %1$s is not valid Port</string>
    <string name="ipNotReached">Server unavailable.\nHave you configured it in the layout\nand started it via Control > Start Server?</string>
    <string name="ipNotReachedInfo">Server unavailable at %1$s:%2$d.</string>
    <string name="gameTimeBug">Can\'t synchronize game time while game is not running.</string>
    <string name="outdatedServer">Your LiveSplit server may be outdated.\nPlease use the newest version or this app won\'t work properly.</string>
    <string name="timerphaseParseError">"Received unparsable timerphase response: %1$s"</string>
    <string name="errorSocketOpen">Could not open network socket</string>
    <string name="networkHiccup">The network can\'t keep up with the requests and messes up!\nMaybe you need to increase the polling delay.</string>
    <string name="prefPollingSummary">Time between automatic timer synchronization.\nLower values may drain your battery faster.</string>
    <string name="prefTimeoutSummary">Time to wait until deciding that something went wrong</string>
    <string name="prefTimerformatSummary">How the time is displayed</string>
    <string name="displayIpConnected">Connected to %1$s:%2$d.</string>
    <string name="displayIpAppstart">Connecting to %1$s:%2$d …</string>
    <string name="startTimer">Start</string>
    <string name="undoSplit">Undo</string>
    <string name="skipSplit">Skip</string>
    <string name="pauseTimer">Pause</string>
    <string name="resetTimer">Reset timer</string>
    <string name="splitText">Split</string>
    <string name="resumeText">Resume</string>
    <string name="timeFinishedText">Time!</string>
    <string name="menuInfo">Infos</string>
    <string name="infosTitle">Infos</string>
    <string name="infosCancel">OK</string>
    <string name="infosMsg">This is a remote for the timer program <a href="https://github.com/LiveSplit/LiveSplit">LiveSplit</a>.\n\nIn order to work you need to add\n<b>Control > LiveSplit Server</b> to your layout and then start the server on the main window with\n<b>Rightclick > Control > Start Server</b>.\n\nThe app requires an IP to know where to connect to your LiveSplit computer.\n\nDevelopment continues on <a href="https://github.com/Ekelbatzen/LiveSplit.Remote.Android">GitHub</a>.\n\nIf you want to contact me:\n- <a href="https://github.com/Ekelbatzen/LiveSplit.Remote.Android/issues">GitHub</a>\n- <a href="https://discord.gg/N6wv8pW">Speedrun Tool Development Discord</a>\n- <a href="mailto:robin.schonborn@gmail.com">Email</a></string>
    <string name="menuGuide">Guide</string>
    <string name="guide_first_time_title">Show guide?</string>
    <string name="guide_first_time_msg">This seems to be your first app start,\ndo you want to see a guide on how to set LiveSplit up with this app?\n\nThe guide is also accessible from the menu.</string>
    <string name="guide_first_time_cancel">Cancel</string>
    <string name="guide_first_time_agree">Show guide</string>
    <string name="guide_title">Guide (%1$d / %2$d)</string>
    <string name="guide_image_image_description">Guide image</string>
    <string name="guide_button_previous">Previous</string>
    <string name="guide_button_next">Next</string>
    <string name="guide_text_page_1"><![CDATA[This guide will show you how to set up LiveSplit to work with this app.<br/><br/>It is also available on <a href="https://github.com/Ekelbatzen/LiveSplit.Remote.Android/blob/master/README.md">GitHub</a>.<br/><br/>It is recommended to open the guide on your LiveSplit computer, so you can just click on the links there.]]></string>
    <string name="guide_text_page_2"><![CDATA[Download and extract LiveSplit 1.7 or newer: <br/><br/><a href="http://livesplit.org/downloads/">http://livesplit.org/downloads/</a>]]></string>
    <string name="guide_text_page_3"><![CDATA[Download and extract the LiveSplit server component (LiveSplit.Server_1.7.x.zip or newer) into the LiveSplit \"components\" sub-directory:<br/><br/><a href="https://github.com/LiveSplit/LiveSplit.Server/releases">https://github.com/LiveSplit/LiveSplit.Server/releases</a>]]></string>
    <string name="guide_text_page_4">Start LiveSplit, open your layout</string>
    <string name="guide_text_page_5">Add the LiveSplit Server component to your layout</string>
    <string name="guide_text_page_6"><![CDATA[Note your IP, you will need it for the app (You may also change port if necessary).<br/><br/>(This IP is needed so the app knows how to connect to your LiveSplit computer.)]]></string>
    <string name="guide_text_page_7">Start the server (Windows may ask for firewall permissions, you have to allow it)</string>
    <string name="guide_text_page_8">Go to the app settings and enter your IP (and port if you changed it)</string>
    <string name="menuConnectionTest">Test connection</string>
    <string name="connection_test_title">Connection Test</string>
    <string name="connection_test_button">Run test</string>
    <string name="connection_test_button_running">Running tests…</string>
    <string name="connection_test_result_title_start">Test results:</string>
    <string name="connection_test_result_title">Test results, last run: %1$s</string>
    <string name="connection_test_1">1. LiveSplit server IP syntax is valid</string>
    <string name="connection_test_2">2. LiveSplit server port syntax is valid</string>
    <string name="connection_test_3">3. App has necessary permissions</string>
    <string name="connection_test_4">4. Device wifi is enabled</string>
    <string name="connection_test_5">5. Device is connected to wifi network</string>
    <string name="connection_test_6">6. Device has been assigned an IPv4 address</string>
    <string name="connection_test_7">7. Network router is pingable</string>
    <string name="connection_test_8">8. LiveSplit server computer is pingable</string>
    <string name="connection_test_9">9. LiveSplit server component is pingable</string>
    <string name="connection_test_10">10. LiveSplit server component connection works</string>
    <string name="connection_test_11">11. LiveSplit server component can process commands</string>
    <string name="connection_test_12">12. DEBUG TEST</string>
    <string name="connection_test_13">13. DEBUG TEST #2</string>
    <string name="connection_test_info_not_run">Test has not been run for this check</string>
    <string name="connection_test_running">Test is being run…</string>
    <string name="connection_test_1_success">%1$s is a valid server IP</string>
    <string name="connection_test_2_success">%1$s is a valid server port</string>
    <string name="connection_test_3_success">Success</string>
    <string name="connection_test_4_success">Success</string>
    <string name="connection_test_5_success">Success</string>
    <string name="connection_test_6_success">Device has IPv4: %1$s</string>
    <string name="connection_test_7_success">Router ping at %1$s was successful</string>
    <string name="connection_test_8_success">LS Computer ping at %1$s was successful</string>
    <string name="connection_test_9_success">LS server component could be successfully pinged at %1$s:%2$s</string>
    <string name="connection_test_10_success">LS server component connection could be established</string>
    <string name="connection_test_11_success">LS component could respond to \"getcurrenttimerphase\" with: %1$s</string>
    <string name="connection_test_12_success">Success, response: %1$s</string>
    <string name="connection_test_13_success">Success, response: %1$s</string>
    <string name="connection_test_1_error">%1$s is not a valid IPv4 address. Please use the IP the computer is using,
        where LiveSplit is run on and enter it in the app settings. The syntax format must be something between 0.0.0.0 to 255.255.255.255</string>
    <string name="connection_test_2_error">%1$s is not a valid port number. Please use the port the LiveSplit server
        component is using and enter it in the app settings. Ports must be between 0 and 65536</string>
    <string name="connection_test_3_error_no_internet">Somehow this app lost the necessary internet permission. Without this permission,
        the app will not work, not even in a local network. This app communicates with the LiveSplit server component
        via network socket, so it needs this permission. If you have a third-party permission remover gadget,
        please look into restoring the permissions for this app or try re-installing this app</string>
    <string name="connection_test_3_error_no_network_state">Somehow this app lost the permission to access the network state.
        Without this permission, some tests here will fail, but the app itself might still work.
        If you have a third-party permission remover gadget, you may want to look into restoring the permission for this app or try re-installing this app</string>
    <string name="connection_test_3_error_no_wifi_state">Somehow this app lost the permission to access the wifi state.
        Without this permission, some tests here will fail, but the app itself might still work.
        If you have a third-party permission remover gadget, you may want to look into restoring the permission for this app or try re-installing this app</string>
    <string name="connection_test_4_error">Wifi seems to be disabled, enable it again? This app works via network socket
        to communicate with the LiveSplit server component in your network</string>
    <string name="connection_test_5_error">Your device is not connected to a wifi network, check your wifi settings. Internal error: %1$s</string>
    <string name="connection_test_6_error_no_ip">Your device does not seem to have an IP assigned from your network.
        Check your wifi settings or your network. Internal error: %1$s</string>
    <string name="connection_test_6_error_ipv6">Your device seems to be assigned only the IPv6 address %1$s, this may cause problems.
        Check your wifi or network settings to assign an IPv4 for your device or hope it still works with IPv6</string>
    <string name="connection_test_7_error">Network router could not be reached at %1$s. Please check your firewalls or router settings. Internal error: %2$s</string>
</resources>