<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_settings"
        android:title="@string/menuSettings"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_test_connection"
        android:title="@string/menuConnectionTest"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_guide"
        android:title="@string/menuGuide"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_info"
        android:title="@string/menuInfo"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_reset_timer"
        android:title="@string/resetTimer"
        app:showAsAction="never" />
</menu>