<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/dialog_guide_image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:contentDescription="@string/guide_image_image_description"
        android:src="@drawable/guide_3" />

    <TextView
        android:id="@+id/dialog_guide_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dialog_guide_button_previous"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/guide_button_previous" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/dialog_guide_button_next"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/guide_button_next" />
    </LinearLayout>
</LinearLayout>